about us page and linking to about and products

--- a/about.html
+++ b/about.html
@@ -45,6 +45,15 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
          </a>
@@ -82,9 +91,18 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/our-batteries">
           Our Batteries
@@ -159,6 +177,15 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
          </a>
@@ -196,9 +223,18 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/our-batteries">
           Our Batteries
@@ -278,7 +314,12 @@
     </div>
    </div>
   </header>
-  <main class="content-block">
+  <main class="content-block text-column">
+   <div class="chemistry-header">
+    <h1>
+     About Us
+    </h1>
+   </div>
    <p>
     At Energy Storage Industries — Asia Pacific (ESI), we provide reliable and environmentally friendly renewable energy storage solutions that are essential for Australia's transition to a renewable energy future.
    </p>
@@ -286,7 +327,11 @@
     ESI is fully integrated — we manufacture, install, maintain and finance energy storage solutions.
    </p>
    <p>
-    We are investing up to $70 million to manufacture and distribute low-cost, long-life iron flow batteries that allow large-scale energy storage [link to the our products and services page] for wholesale electricity generators, energy retailers, and commercial and industrial (C&amp;I) customers.
+    We are investing up to $70 million to manufacture and distribute low-cost, long-life iron flow batteries that allow
+    <a href="/products">
+     large-scale energy storage
+    </a>
+    for wholesale electricity generators, energy retailers, and commercial and industrial (C&amp;I) customers.
    </p>
    <p>
     We also investing in the manufacture of small, modular distributed energy storage units that can be installed in low voltage networks and microgrids, and behind the meter installations for C&amp;I customers.
@@ -295,10 +340,18 @@
     By 2026, ESI will deliver 400 megawatts (MW) of energy storage each year for the next 15 years — that is six gigawatts (GW) of energy storage, or 20 per cent of Australia's renewable energy needs.
    </p>
    <p>
-    We are a Queensland-based, 100 per cent Australian-owned company. We have a research and development facility at the National Battery Testing Centre [when created, this will link to the NBTC page] in Brisbane.
+    <!--    [when created, this will link to the NBTC page]-->
+    We are a Queensland-based, 100 per cent Australian-owned company. We have a research and development facility at the National Battery Testing Centre in Brisbane.
    </p>
    <p>
-    Construction has started on our manufacturing facility at Maryborough, [when created, this will link to the Maryborough page] and we will soon expand our operations with a second facility at Townsville [when created, this will link to Townsville page]. ESI plans to export renewable energy storage solutions to Asia Pacific within the next six years.
+    Construction has started on our
+    <a href="maryborough">
+     manufacturing facility at Maryborough
+    </a>
+    , and we will soon expand our operations with a second facility at either Townsville or Gladstone.
+   </p>
+   <p>
+    ESI plans to export renewable energy storage solutions to Asia Pacific within the next six years.
    </p>
   </main>
   <footer>
