--- a/maryborough.html
+++ b/maryborough.html
@@ -47,6 +47,15 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
          </a>
@@ -84,9 +93,18 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/our-batteries">
           Our Batteries
@@ -161,6 +179,15 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
          </a>
@@ -198,9 +225,18 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/our-batteries">
           Our Batteries
@@ -282,15 +318,15 @@
   </header>
   <main class="content-block">
    <div class="news-article">
-<!--    <div class="text-column chemistry-header">-->
-<!--    </div>-->
-    <div class="text-column" >
+    <!--    <div class="text-column chemistry-header">-->
+    <!--    </div>-->
+    <div class="text-column">
      <div class="chemistry-header">
       <h1>
        Maryborough
       </h1>
      </div>
-     <img src="images/Sod%20Turning%201.jpg" alt="Sod Turning" style="width: 100%; margin-left: auto; margin-right: auto"/>
+     <img alt="Sod Turning" src="images/Sod%20Turning%201.jpg" style="width: 100%; margin-left: auto; margin-right: auto"/>
      <p>
       Work on our $70 million Maryborough facility officially started on Wednesday, 6 July 2022.
      </p>
@@ -301,20 +337,27 @@
       Once complete in 2024, the Maryborough facility will manufacture and distribute iron flow batteries that allow large-scale energy storage for wholesale electricity generators, energy retailers, and commercial and industrial customers.
      </p>
      <div class="slide-container" style="margin-left: auto; margin-right: auto">
-        <span class="prev banner-button event-button" onclick="plusSlide(-1)">&#10094;</span>
-        <img class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%201.jpg" alt="Maryborough Facility 1"/>
-        <img class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%202.jpg" alt="Maryborough Facility 2"/>
-        <img class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%203.jpg" alt="Maryborough Facility 3"/>
-        <span class="next banner-button event-button" onclick="plusSlide(1)">&#10095;</span>
-    </div>
-    <div class="event-dox-box" style="text-align:center; margin-bottom: 30px">
-        <span style="padding: 2px; border-radius: 5px; background-color: rgba(0,0,0,.5);">
-            <span class="event-dot" onclick="currentSlide(1)"></span>
-            <span class="event-dot" onclick="currentSlide(2)"></span>
-            <span class="event-dot" onclick="currentSlide(3)"></span>
-        </span>
-    </div>
- <!--    <img alt="Features and advantages" class="img-fluid" src="images/Energy-Transition.png"/>-->
+      <span class="prev banner-button event-button" onclick="plusSlide(-1)">
+       ❮
+      </span>
+      <img alt="Maryborough Facility 1" class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%201.jpg"/>
+      <img alt="Maryborough Facility 2" class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%202.jpg"/>
+      <img alt="Maryborough Facility 3" class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%203.jpg"/>
+      <span class="next banner-button event-button" onclick="plusSlide(1)">
+       ❯
+      </span>
+     </div>
+     <div class="event-dox-box" style="text-align:center; margin-bottom: 30px">
+      <span style="padding: 2px; border-radius: 5px; background-color: rgba(0,0,0,.5);">
+       <span class="event-dot" onclick="currentSlide(1)">
+       </span>
+       <span class="event-dot" onclick="currentSlide(2)">
+       </span>
+       <span class="event-dot" onclick="currentSlide(3)">
+       </span>
+      </span>
+     </div>
+     <!--    <img alt="Features and advantages" class="img-fluid" src="images/Energy-Transition.png"/>-->
     </div>
    </div>
   </main>
