--- a/products.html
+++ b/products.html
@@ -45,6 +45,15 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
          </a>
@@ -82,9 +91,18 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/our-batteries">
           Our Batteries
@@ -159,6 +177,15 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
          </a>
@@ -196,9 +223,18 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/our-batteries">
           Our Batteries
@@ -279,26 +315,26 @@
    </div>
   </header>
   <main class="content-block text-column">
-   <div class=" chemistry-header">
+   <div class="chemistry-header">
     <h1>
      Our Products
     </h1>
    </div>
-<!--
+   <!--
 OUR SERVICES
 
 -->
    <p>
-    ESI manufactures and distributes iron flow batteries that allow large-scale energy storage for wholesale electricity generators, energy retailers, and commercial and industrial (C&I) customers.
+    ESI manufactures and distributes iron flow batteries that allow large-scale energy storage for wholesale electricity generators, energy retailers, and commercial and industrial (C&amp;I) customers.
    </p>
    <p>
     ESI’s iron flow batteries have a 10 to 14-hour storage capacity and lifecycle of 25 years — something that is not provided by other battery technologies.
    </p>
-<!--   [Insert an image of the energy centre – preferably on the right hand side of the page.]-->
+   <!--   [Insert an image of the energy centre – preferably on the right hand side of the page.]-->
    <p>
-    ESI also manufactures small, modular distributed energy storage units that can be installed in the voltage networks and microgrids (including in Queensland’s 33 remote communities that are currently powered by diesel) and behind the meter installations for C&I customers.
+    ESI also manufactures small, modular distributed energy storage units that can be installed in the voltage networks and microgrids (including in Queensland’s 33 remote communities that are currently powered by diesel) and behind the meter installations for C&amp;I customers.
    </p>
-<!--   [Insert an image of an energy warehouse – preferably on the right hand side of the page.]-->
+   <!--   [Insert an image of an energy warehouse – preferably on the right hand side of the page.]-->
    <p>
     Our iron flow batteries are completely sustainable and 100 per cent recyclable, and the environmentally friendly electrolyte means that the product is ideally suited to remote locations, National Parks and the Great Barrier Reef.
    </p>
@@ -306,13 +342,25 @@ OUR SERVICES
     ESI’s batteries are safe, water-based, non-hazardous, and fully recyclable. Use of abundant resources ensures sustainable production too. In brief, our products are:
    </p>
    <ul class="tick-list">
-     <li>Low-cost</li>
-     <li>Long-life</li>
-     <li>Recyclable</li>
-     <li>Safe</li>
-     <li>Environmentally friendly</li>
-     <li>Scalable and adaptable</li>
-    </ul>
+    <li>
+     Low-cost
+    </li>
+    <li>
+     Long-life
+    </li>
+    <li>
+     Recyclable
+    </li>
+    <li>
+     Safe
+    </li>
+    <li>
+     Environmentally friendly
+    </li>
+    <li>
+     Scalable and adaptable
+    </li>
+   </ul>
    <p>
     The products are also ideally suited to Australian conditions and an elegant solution to Australia’s renewable energy needs. They will help underpin security and stability of supply as Australia transitions to a network where generation comes from renewable energy sources.
    </p>
