--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
          </a>
@@ -83,9 +92,18 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/our-batteries">
           Our Batteries
@@ -160,6 +178,15 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
          </a>
@@ -197,9 +224,18 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/our-batteries">
           Our Batteries
