--- a/solutions.html
+++ b/solutions.html
@@ -45,6 +45,15 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
          </a>
@@ -82,9 +91,18 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/our-batteries">
           Our Batteries
@@ -159,6 +177,15 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
          </a>
@@ -196,9 +223,18 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/our-batteries">
           Our Batteries
