--- a/maryborough.html
+++ b/maryborough.html
@@ -348,7 +348,7 @@
       </span>
      </div>
      <div class="event-dox-box" style="text-align:center; margin-bottom: 30px">
-      <span style="padding: 2px; border-radius: 5px; background-color: rgba(0,0,0,.5);">
+      <span style="padding: 2px; border-radius: 5px;">
        <span class="event-dot" onclick="currentSlide(1)">
        </span>
        <span class="event-dot" onclick="currentSlide(2)">
