rework of environment page

--- a/solutions.html
+++ b/solutions.html
@@ -323,64 +323,68 @@
      The modular design of our products allows for ESI to deliver across multiple industry uses:
     </p>
    </div>
-   <div class="row">
-    <div class="col-md-4">
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env ">
      <img alt="Utility" class="img-responsive" src="images/P_S-Solutions-Utility-Icon.svg" style="max-width: 137px;"/>
     </div>
-    <div class="col-md-8 chemistry-header">
+    <div class="text-column our-team-text-column chemistry-header">
      <h3>
       Utility
      </h3>
+     <img alt="Utility" class="our-team-text-img" src="images/P_S-Solutions-Utility-Icon.svg" style="max-width: 137px;"/>
      <p>
       Large scale installations of medium duration (10 hour) storage from 20MW to 1GW integrating into existing
                 Transmission connections enabling an orderly transition from fossil fuel generation to Renewable sources
      </p>
     </div>
    </div>
-   <div class="row">
-    <div class="col-md-4">
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env">
      <img alt="Transmission" class="img-responsive" src="images/P_S-Solutions-Transmission-Icon.svg" style="max-width: 137px;"/>
     </div>
-    <div class="col-md-8 chemistry-header">
+    <div class="text-column our-team-text-column chemistry-header">
+     <img alt="Transmission" class="our-team-text-img" src="images/P_S-Solutions-Transmission-Icon.svg" style="max-width: 137px;"/>
      <h3>
       Transmission/Distribution
      </h3>
-     <p>
-      the advent of intermittent generation places great strains on the grid, by locating ESI storage in constraint
-                points, utilising grid forming inverters, grid operators are able to stabilize the grid whilst enabling deeper
-                distributed and transmission renewable penetration.
+    <p>
+      The advent of intermittent generation places great strains on the grid, by locating ESI storage in constraint
+      points, utilising grid forming inverters, grid operators are able to stabilize the grid whilst enabling deeper
+      distributed and transmission renewable penetration.
      </p>
     </div>
    </div>
-   <div class="row">
-    <div class="col-md-4">
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env">
      <img alt="Commercial" class="img-responsive" src="images/P_S-Solutions-Commercial-Icon.svg" style="max-width: 137px;"/>
     </div>
-    <div class="col-md-8 chemistry-header">
+    <div class="text-column our-team-text-column chemistry-header">
+     <img alt="Commercial" class="our-team-text-img" src="images/P_S-Solutions-Commercial-Icon.svg" style="max-width: 137px;"/>
      <h3>
       Commercial and industrial
      </h3>
      <p>
       Localised generation will be a key part of a clean energy grid. Large scale commercial and industrial users are
-                able to take control of their energy costs via small scale generation and accompanying storage. ESI’s modular
-                product allows for all Commercial and Industrial (from small to large) users to limit their draw from the grid.
-                Environmentally friendly and with no flammable risk, the storage is able to be installed in most locations.
+      able to take control of their energy costs via small scale generation and accompanying storage. ESI’s modular
+      product allows for all Commercial and Industrial (from small to large) users to limit their draw from the grid.
+      Environmentally friendly and with no flammable risk, the storage is able to be installed in most locations.
      </p>
     </div>
    </div>
-   <div class="row">
-    <div class="col-md-4">
-     <img alt="Rural" class="img-responsive" src="images/P_S-Solutions-Rural-Icon.svg" style="max-width: 137px;"/>
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env">
+     <img alt="Commercial" class="img-responsive" src="images/P_S-Solutions-Rural-Icon.svg" style="max-width: 137px;"/>
     </div>
-    <div class="col-md-8 chemistry-header">
+    <div class="text-column our-team-text-column chemistry-header">
+     <img alt="Commercial" class="our-team-text-img" src="images/P_S-Solutions-Rural-Icon.svg" style="max-width: 137px;"/>
      <h3>
       Rural, Remote and Island
      </h3>
      <p>
-      De-carbonisation of the rural, remote and Island networks are an integral part of a zero carbon emission grid.
-                Scalable stand alone power systems that can integrate renewable generation, storage, load management
-                systems and back up generation capacity (diesel generation, compressed air, Hydrogen fuel cells) can be
-                adapted to meet the largest to the smallest of load requirements.
+      De-carbonisation of the rural, remote and island networks are an integral part of a zero carbon emission grid.
+      Scalable stand-alone power systems that can integrate renewable generation, storage, load management
+      systems and back up generation capacity (diesel generation, compressed air, Hydrogen fuel cells) can be
+      adapted to meet the largest to the smallest of load requirements.
      </p>
     </div>
    </div>
