20-10-22 minor website changes

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
         </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/senior">
-          Senior Mangement
+          Senior Management
          </a>
         </li>
         <li>
@@ -196,7 +196,7 @@
         </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/senior">
-          Senior Mangement
+          Senior Management
          </a>
         </li>
         <li>
