--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
         </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/senior">
-          Senior Mangement
+          Senior Management
          </a>
         </li>
         <li>
@@ -203,7 +203,7 @@
         </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/senior">
-          Senior Mangement
+          Senior Management
          </a>
         </li>
         <li>
@@ -322,109 +322,109 @@
    </div>
   </header>
  </body>
-<main class="content-block">
- <img alt="contact" src="images/contact-line.png" style="text-align: center"/>
- <div class="text-column" style="padding: 0 0 0 0">
-  <h2 style="text-align: center">
-   OUR CONTACT INFO
-  </h2>
- </div>
- <div class="contact-page-info">
-  <div class="contact-page-box">
-   <i class="material-icons" style="color: #71b6d5">
-    room
-   </i>
-   <h2>
-    Address
+ <main class="content-block">
+  <img alt="contact" src="images/contact-line.png" style="text-align: center"/>
+  <div class="text-column" style="padding: 0 0 0 0">
+   <h2 style="text-align: center">
+    OUR CONTACT INFO
    </h2>
-   <p>
-    2/11 Morrison Close,
-   </p>
-   <p>
-    Mansfield 4122
-   </p>
-   <p>
-    Queensland
-   </p>
   </div>
-  <div class="contact-page-box">
-   <i class="material-icons" style="color: #71b6d5">
-    today
-   </i>
-   <h2>
-    Working Time
-   </h2>
-   <p>
-    Monday - Friday — 08:00 - 16:00
-   </p>
-   <p>
-    Saturday — Closed
-   </p>
-   <p>
-    Sunday — Closed
-   </p>
-  </div>
-  <div class="contact-page-box">
-   <i class="material-icons" style="color: #71b6d5">
-    email
-   </i>
-   <h2>
-    Email
-   </h2>
-   <p>
-    info@esiap.com.au
-   </p>
-  </div>
- </div>
- <img alt="mail" src="images/mail-line.png" style="text-align: center"/>
- <div class="text-column" style="padding: 0 0 0 0">
-  <h2 style="text-align: center">
-   CONTACT FORM
-  </h2>
- </div>
- <form action="https://formspree.io/f/mwkwadkq" class="contact-form" id="contact-form" method="POST">
-  <input class="contact-form-sub mr-auto contact-area" name="name" placeholder="Name" required="" type="text"/>
-  <input class="contact-form-sub contact-area" name="_replyto" placeholder="Email" required="" type="email"/>
-  <textarea class="contact-form-main contact-area" id="message" name="message" placeholder="Message" required="" rows="5" type="text"></textarea>
-  <input class="g-recaptcha contact-form-main contact-form-btn" data-callback="onSubmit" data-sitekey="6Lemal0hAAAAABhOr6vrWj3G6jBw1Hbi6omyL3jT" type="submit" value="Send"/>
- </form>
-</main>
-<footer>
- <section class="contact">
-  <div class="footer-information">
-   <a class="footer-logo" href="/">
-    <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
-   </a>
-   <div class="footer-contacts">
-    <h3 class="contact-text">
-     Stay up to date and follow us
-    </h3>
-    <div class="footer-icon-container contact-text">
-     <a href="https://twitter.com/ESIAsiaPacific">
-      <img class="footer-icon" src="icons/2021%20Twitter%20logo%20-%20white.png"/>
-     </a>
-     <a href="https://facebook.com/ESIAsiaPacific">
-      <img class="footer-icon" src="icons/f_logo_RGB-White_512.png"/>
-     </a>
-     <a href="https://www.linkedin.com/company/81527417">
-      <img class="footer-icon" src="icons/In-White-128.png"/>
-     </a>
-    </div>
-    <br/>
-    <a class="footer-contact-us" href="/contact">
-     <h3 class="contact-text">
-      Contact Us
-     </h3>
-    </a>
+  <div class="contact-page-info">
+   <div class="contact-page-box">
+    <i class="material-icons" style="color: #71b6d5">
+     room
+    </i>
+    <h2>
+     Address
+    </h2>
+    <p>
+     139B Latrobe Terrace,
+    </p>
+    <p>
+     Paddington 4064
+    </p>
+    <p>
+     Queensland
+    </p>
+   </div>
+   <div class="contact-page-box">
+    <i class="material-icons" style="color: #71b6d5">
+     today
+    </i>
+    <h2>
+     Working Time
+    </h2>
+    <p>
+     Monday - Friday — 08:00 - 16:00
+    </p>
+    <p>
+     Saturday — Closed
+    </p>
+    <p>
+     Sunday — Closed
+    </p>
+   </div>
+   <div class="contact-page-box">
+    <i class="material-icons" style="color: #71b6d5">
+     email
+    </i>
+    <h2>
+     Email
+    </h2>
+    <p>
+     info@esiap.com.au
+    </p>
    </div>
   </div>
- </section>
- <section class="footer-background">
-  <div class="footer navbar-expand-lg navbar">
-   <span class="mr-auto">
-    © 2022 All rights reserved.
-   </span>
+  <img alt="mail" src="images/mail-line.png" style="text-align: center"/>
+  <div class="text-column" style="padding: 0 0 0 0">
+   <h2 style="text-align: center">
+    CONTACT FORM
+   </h2>
   </div>
- </section>
-</footer>
+  <form action="https://formspree.io/f/mwkwadkq" class="contact-form" id="contact-form" method="POST">
+   <input class="contact-form-sub mr-auto contact-area" name="name" placeholder="Name" required="" type="text"/>
+   <input class="contact-form-sub contact-area" name="_replyto" placeholder="Email" required="" type="email"/>
+   <textarea class="contact-form-main contact-area" id="message" name="message" placeholder="Message" required="" rows="5" type="text"></textarea>
+   <input class="g-recaptcha contact-form-main contact-form-btn" data-callback="onSubmit" data-sitekey="6Lemal0hAAAAABhOr6vrWj3G6jBw1Hbi6omyL3jT" type="submit" value="Send"/>
+  </form>
+ </main>
+ <footer>
+  <section class="contact">
+   <div class="footer-information">
+    <a class="footer-logo" href="/">
+     <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
+    </a>
+    <div class="footer-contacts">
+     <h3 class="contact-text">
+      Stay up to date and follow us
+     </h3>
+     <div class="footer-icon-container contact-text">
+      <a href="https://twitter.com/ESIAsiaPacific">
+       <img class="footer-icon" src="icons/2021%20Twitter%20logo%20-%20white.png"/>
+      </a>
+      <a href="https://facebook.com/ESIAsiaPacific">
+       <img class="footer-icon" src="icons/f_logo_RGB-White_512.png"/>
+      </a>
+      <a href="https://www.linkedin.com/company/81527417">
+       <img class="footer-icon" src="icons/In-White-128.png"/>
+      </a>
+     </div>
+     <br/>
+     <a class="footer-contact-us" href="/contact">
+      <h3 class="contact-text">
+       Contact Us
+      </h3>
+     </a>
+    </div>
+   </div>
+  </section>
+  <section class="footer-background">
+   <div class="footer navbar-expand-lg navbar">
+    <span class="mr-auto">
+     © 2022 All rights reserved.
+    </span>
+   </div>
+  </section>
+ </footer>
 </html>
