--- a/senior.html
+++ b/senior.html
@@ -64,7 +64,7 @@
         </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/senior">
-          Senior Mangement
+          Senior Management
          </a>
         </li>
         <li>
@@ -196,7 +196,7 @@
         </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/senior">
-          Senior Mangement
+          Senior Management
          </a>
         </li>
         <li>
@@ -366,9 +366,10 @@
    </div>
    <div class="our-team-content">
     <div class="our-team-image-column">
-     <!--     <img alt="Ian Connor" class="img-responsive" src="images/Ian.png"/>-->
+     <img alt="Peter Briede" class="img-responsive" src="images/Peter-Briede-Profile-Picture.png"/>
     </div>
     <div class="text-column our-team-text-column">
+     <img alt="Peter Briede" class="our-team-text-img" src="images/Peter-Briede-Profile-Picture.png"/>
      <h3>
       Peter Briede
      </h3>
