--- a/solutions.html
+++ b/solutions.html
@@ -64,7 +64,7 @@
         </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/senior">
-          Senior Mangement
+          Senior Management
          </a>
         </li>
         <li>
@@ -196,7 +196,7 @@
         </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/senior">
-          Senior Mangement
+          Senior Management
          </a>
         </li>
         <li>
@@ -324,7 +324,7 @@
     </p>
    </div>
    <div class="our-team-content">
-    <div class="our-team-image-column our-team-image-column-env ">
+    <div class="our-team-image-column our-team-image-column-env">
      <img alt="Utility" class="img-responsive" src="images/P_S-Solutions-Utility-Icon.svg" style="max-width: 137px;"/>
     </div>
     <div class="text-column our-team-text-column chemistry-header">
@@ -347,7 +347,7 @@
      <h3>
       Transmission/Distribution
      </h3>
-    <p>
+     <p>
       The advent of intermittent generation places great strains on the grid, by locating ESI storage in constraint
       points, utilising grid forming inverters, grid operators are able to stabilize the grid whilst enabling deeper
       distributed and transmission renewable penetration.
