--- a/maryborough.html
+++ b/maryborough.html
@@ -66,7 +66,7 @@
         </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/senior">
-          Senior Mangement
+          Senior Management
          </a>
         </li>
         <li>
@@ -198,7 +198,7 @@
         </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/senior">
-          Senior Mangement
+          Senior Management
          </a>
         </li>
         <li>
