home page text changes and links

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     <p>
      We provide reliable and environmentally friendly
      <strong>
-      renewable energy storage solutions
+      renewable energy storage battery solutions
      </strong>
      that are essential for
      <strong>
@@ -330,7 +330,10 @@
      </strong>
     </p>
     <p>
-     Energy Storage Industries - Asia Pacific (ESI) is fully integrated — we manufacture, install, maintain and finance energy storage solutions.
+     Energy Storage Industries - Asia Pacific (ESI) is fully integrated — we manufacture, install, maintain and finance energy storage battery solutions.
+    </p>
+    <p>
+     We have already installed 10 grid-scale batteries at a Queensland facility, helping to secure Queensland’s clean energy future, with a further 10 batteries en route.
     </p>
     <p>
      By the end of 2026, ESI aims to deliver up to 400 megawatts (MW) of energy storage each year for the next 15 years.
@@ -348,12 +351,31 @@
     <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="440" src="https://www.youtube.com/embed/1BH4u7y8HsU" style="margin:auto; margin-top: 30px" title="YouTube video player" width="780">
     </iframe>
    </div>
-   <div class="news-feed">
-    <div id="flockler-embed-1827343613409ce62cd5d4e9fc68cb00">
-    </div>
-    <script async="" src="https://plugins.flockler.com/embed/182733e15910a126432935ff4ee5c9f4/1827343613409ce62cd5d4e9fc68cb00">
-    </script>
+   <div class="text-column"></div>
+   <div class="row" style="text-align: left">
+    <!--    <div></div>-->
+    <p>
+     Click
+     <a class="bold-link" href="/about">
+      <strong>
+       here
+      </strong>
+     </a>
+      to learn more about ESI and
+     <a class="bold-link" href="/our-batteries">
+      <strong>
+       here
+      </strong>
+     </a>
+     to learn more about iron flow battery technology.
+    </p>
    </div>
+<!--   <div class="news-feed">-->
+<!--    <div id="flockler-embed-1827343613409ce62cd5d4e9fc68cb00">-->
+<!--    </div>-->
+<!--    <script async="" src="https://plugins.flockler.com/embed/182733e15910a126432935ff4ee5c9f4/1827343613409ce62cd5d4e9fc68cb00">-->
+<!--    </script>-->
+<!--   </div>-->
    <!--    <video class="media-video" style='border: 2px solid #f7931c;' controls poster="images/ESI%20corporate%20video%20tile.jpg">-->
    <!--     <source src="https://www.youtube.com/embed/DwZ2jdRH5GI">-->
    <!--     frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen allow="autoplay"-->
