--- a/about.html
+++ b/about.html
@@ -327,31 +327,32 @@
     ESI is fully integrated — we manufacture, install, maintain and finance energy storage solutions.
    </p>
    <p>
-    We are investing up to $70 million to manufacture and distribute low-cost, long-life iron flow batteries that allow
-    <a href="/products">
-     large-scale energy storage
+    We are investing in the manufacture and distribution of low-cost, long-life iron flow batteries that allow
+    <a class="bold-link" href="/products">
+     <strong>
+      large-scale energy storage
+     </strong>
     </a>
-    for wholesale electricity generators, energy retailers, and commercial and industrial (C&amp;I) customers.
+<!--    <a href="/products">-->
+<!--     large-scale energy storage-->
+<!--    </a>-->
+    for wholesale electricity generators, energy retailers, and commercial and industrial (C&amp;I) customers. Construction has started on our manufacturing facility at Maryborough.
    </p>
    <p>
-    We also investing in the manufacture of small, modular distributed energy storage units that can be installed in low voltage networks and microgrids, and behind the meter installations for C&amp;I customers.
+    We are also investing in the manufacture of small, modular distributed energy storage units that can be installed in low voltage networks and microgrids, and behind the meter installations for C&amp;I customers.
    </p>
    <p>
-    By 2026, ESI will deliver 400 megawatts (MW) of energy storage each year for the next 15 years — that is six gigawatts (GW) of energy storage, or 20 per cent of Australia's renewable energy needs.
+    By 2026, ESI will deliver 400 megawatts (MW) of energy storage each year for the next 15 years — that is 6 gigawatts (GW) of energy storage, or 20 per cent of Australia's renewable energy needs.
    </p>
    <p>
     <!--    [when created, this will link to the NBTC page]-->
-    We are a Queensland-based, 100 per cent Australian-owned company. We have a research and development facility at the National Battery Testing Centre in Brisbane.
+    We have a research and development facility at the National Battery Testing Centre in Brisbane.
    </p>
    <p>
-    Construction has started on our
-    <a href="maryborough">
-     manufacturing facility at Maryborough
-    </a>
-    , and we will soon expand our operations with a second facility at either Townsville or Gladstone.
+    With a focus on constantly improving energy storage technology, we have developed a research and development facility at the renowned National Battery Testing Centre in Brisbane.
    </p>
    <p>
-    ESI plans to export renewable energy storage solutions to Asia Pacific within the next six years.
+    ESI plans to export renewable energy battery storage solutions to the Asia Pacific region within the next six years.
    </p>
   </main>
   <footer>
